--- a/.github/workflows/quality-checks-build-and-deploy.yml
+++ b/.github/workflows/quality-checks-build-and-deploy.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - develop
   pull_request:
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
